--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-Flask==2.3.3
+flask==3.0.2
+flask-login==0.6.3
+python==3.12.*
+flask-mysqldb==2.0.0
+flask-wtf==1.2.1
+email-validator==2.1.0.post1
+flask-migrate==4.0.5
