--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
+mysqlclient==2.1.1
 flask==3.0.*
 flask-login==0.6.*
 flask-mysqldb==2.0.*
 flask-wtf==1.2.*
-email-validator==2.1.*
 flask-migrate==4.0.*
